# Rabbit-Code-Audit

./: .dockerignore  .gitignore  Dockerfile  README.md  dispatch.yaml  dispatch_mock.yaml  docker-compose.yaml
cairn/: _tmp_check.py  _tmp_debug22.py  _tmp_login_check.py  _tmp_obs_preservation.py  _tmp_regress.py  _tmp_regression.py  _tmp_t73.py  _tmp_task14_login_verify.py  _tmp_task14_verify.py  _tmp_task15_check.py  _tmp_task21_verify.py  _tmp_task42_verify.py  _tmp_task43_result.txt  _tmp_task43_verify.py  _tmp_task51_verify.py  _tmp_task52_result.txt  _tmp_task52_verify.py  _tmp_task53_result.txt  _tmp_task54_result.txt  _tmp_task54_verify.py  _tmp_task71_result.txt  _tmp_task71_verify.py  _tmp_task73_import.txt  _tmp_task81_result.txt  _tmp_task81_verify.py  _tmp_task82_result.txt  _tmp_task82_verify.py  _tmp_validate.py  _tmp_verify22.py  _tmp_verify_1415.py  pyproject.toml
cairn/frontend/: index.html  package-lock.json  package.json  vite.config.js
cairn/tests/: conftest.py  test_audit_tool_runner.py  test_auth_middleware.py  test_auth_router.py  test_bootstrap_source_brief.py  test_business_graph.py  test_code_audit_sources.py  test_core_metadata.py  test_database_locking.py  test_dispatcher_container_isolation.py  test_dispatcher_explore_write.py  test_dispatcher_instance_lock.py  test_dispatcher_model_proxy.py  test_dispatcher_orphan_cleanup.py  test_dispatcher_protocol_client_auth.py  test_dispatcher_review_task.py  test_dispatcher_scheduler.py  test_dispatcher_source_mounts.py  test_dispatcher_startup_degradation.py  test_maintenance_backup.py  (+22 more)
(+160 files in other folders)
